Fix map on smaller screens

--- a/source/stylesheets/demo/homepage/_map.scss
+++ b/source/stylesheets/demo/homepage/_map.scss
@@ -25,22 +25,13 @@
     }
 
   }
-  @media screen and (max-width: 320px){
+  @media screen and (max-width: 380px){
     padding-bottom: 30%;
     .iframe-container  {
       @extend %container;
       padding: 0;
       text-align: center;
-      width: 300px;
-      height: 220px;
-
-      iframe {
-        border: 0;
-        display: block;
-        border-style: none;
-        width: 300px;
-        height: 220px;
-      }
+      width: 280px;
     }
   }
 }
